--- a/index.html
+++ b/index.html
@@ -2,23 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edu App</title>
+    <title>PMG™EDU</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            color: #f0f0f0;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5rem;
+            color: #FFD700;
+            margin-bottom: 30px;
+        }
+        #subjects button {
+            margin: 10px;
+            padding: 15px 25px;
+            font-size: 1.1rem;
+            cursor: pointer;
+            border: none;
+            border-radius: 10px;
+            background-color: #333;
+            color: #FFD700;
+            transition: 0.3s;
+        }
+        #subjects button:hover {
+            background-color: #FFD700;
+            color: #333;
+        }
+        #notes {
+            margin-top: 30px;
+            text-align: left;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .ai-helper, .dictionary {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #333;
+            border-radius: 10px;
+        }
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #1a1a1a;
+            background-color: #FFD700;
+            padding: 10px 20px;
+            border-radius: 8px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Edu App</h1>
+    <h1>PMG™EDU</h1>
 
     <div id="subjects">
         <button onclick="showNotes('MA110')">MA110</button>
         <button onclick="showNotes('PH110')">PH110</button>
-        <button onclick="showNotes('LA111')">LA111</button>
         <button onclick="showNotes('CH110')">CH110</button>
     </div>
 
-    <div id="notes"></div>
+    <div id="notes">
+        <p>Select a subject to see notes.</p>
+    </div>
+
+    <div class="ai-helper">
+        <h3>AI Helper</h3>
+        <p>Type your question and get a detailed explanation of concepts or answers:</p>
+        <input type="text" id="aiQuestion" placeholder="Ask something..." style="width: 80%; padding: 10px; border-radius: 5px;">
+        <button onclick="askAI()" style="padding: 10px 15px; margin-left: 5px; border-radius: 5px; cursor:pointer;">Ask AI</button>
+        <p id="aiAnswer" style="margin-top: 15px;"></p>
+    </div>
+
+    <div class="dictionary">
+        <h3>Dictionary</h3>
+        <p>Search for definitions of terms:</p>
+        <input type="text" id="dictTerm" placeholder="Enter term..." style="width: 80%; padding: 10px; border-radius: 5px;">
+        <button onclick="searchDict()" style="padding: 10px 15px; margin-left: 5px; border-radius: 5px; cursor:pointer;">Search</button>
+        <p id="dictResult" style="margin-top: 15px;"></p>
+    </div>
 
     <a href="https://wa.me/260775302886" target="_blank">Send Subscription Payment</a>
 
-    <script src="script.js"></script>
+    <script>
+        const notesData = {
+            'MA110': `
+                <h2>MA110 - Mathematics Notes</h2>
+                <ul>
+                    <li>Limits and Continuity: Concepts, Examples, and Techniques</li>
+                    <li>Differentiation: Rules, Applications, and Problem Solving</li>
+                    <li>Integration: Indefinite and Definite Integrals</li>
+                </ul>
+            `,
+            'PH110': `
+                <h2>PH110 - Physics Notes</h2>
+                <ul>
+                    <li>Work, Power, and Energy: Formulas & Examples</li>
+                    <li>Newton's Laws: Concepts and Applications</li>
+                    <li>Gravitation: Free Fall, Satellites, and Orbits</li>
+                </ul>
+            `,
+            'CH110': `
+                <h2>CH110 - Chemistry Notes</h2>
+                <ul>
+                    <li>Atomic Structure: Electrons, Protons, and Neutrons</li>
+                    <li>Chemical Bonding: Ionic, Covalent, Metallic</li>
+                    <li>Thermochemistry: Enthalpy, Heat Transfer, and Reactions</li>
+                </ul>
+            `
+        };
+
+        function showNotes(subject) {
+            document.getElementById('notes').innerHTML = notesData[subject] || '<p>No notes available.</p>';
+        }
+
+        function askAI() {
+            const question = document.getElementById('aiQuestion').value;
+            if(!question) return alert('Please type a question first.');
+            // Placeholder response
+            document.getElementById('aiAnswer').innerHTML = `🤖 AI Answer: This is where a detailed explanation for "${question}" would appear.`;
+        }
+
+        function searchDict() {
+            const term = document.getElementById('dictTerm').value;
+            if(!term) return alert('Please enter a term.');
+            // Placeholder dictionary
+            const dictionary = {
+                'Energy': 'The capacity to do work or produce heat.',
+                'Force': 'An influence that changes the motion of an object.',
+                'Atom': 'The smallest unit of matter that retains the properties of an element.'
+            };
+            document.getElementById('dictResult').innerHTML = dictionary[term] || 'Term not found in dictionary.';
+        }
+    </script>
 </body>
-</html>
+    </html>
