--- a/index.html
+++ b/index.html
@@ -1,187 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>PMG™EDU</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #1a1a1a;
-            color: #f0f0f0;
-            text-align: center;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 2.5rem;
-            color: #FFD700;
-            margin-bottom: 30px;
-        }
-        #subjects button {
-            margin: 10px;
-            padding: 15px 25px;
-            font-size: 1.1rem;
-            cursor: pointer;
-            border: none;
-            border-radius: 10px;
-            background-color: #333;
-            color: #FFD700;
-            transition: 0.3s;
-        }
-        #subjects button:hover {
-            background-color: #FFD700;
-            color: #333;
-        }
-        #notes {
-            margin-top: 30px;
-            text-align: left;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #222;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .ai-helper, .dictionary, .past-papers {
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #333;
-            border-radius: 10px;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .past-papers h3 {
-            color: #FFD700;
-            margin-bottom: 15px;
-        }
-        .past-papers button {
-            display: block;
-            width: 100%;
-            margin: 10px 0;
-            padding: 15px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            background: linear-gradient(135deg, #FFD700, #cfa100);
-            color: #1a1a1a;
-            font-weight: bold;
-        }
-        a {
-            display: inline-block;
-            margin-top: 30px;
-            text-decoration: none;
-            color: #1a1a1a;
-            background-color: #FFD700;
-            padding: 12px 25px;
-            border-radius: 8px;
-            font-weight: bold;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PMG™EDU | All Courses</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #0f0f0f;
+    color: #f0f0f0;
+    text-align: center;
+    padding: 20px;
+}
+h1 {
+    color: #FFD700;
+}
+.courses {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
+    gap: 15px;
+    max-width: 800px;
+    margin: auto;
+}
+.course {
+    background: #1b1b1b;
+    padding: 20px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+.course h3 {
+    color: #FFD700;
+}
+.section {
+    margin-top: 30px;
+    background: #1b1b1b;
+    padding: 20px;
+    border-radius: 12px;
+    max-width: 800px;
+    margin: auto;
+}
+.paper-btn {
+    width: 100%;
+    padding: 12px;
+    margin: 6px 0;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    background: linear-gradient(135deg,#FFD700,#cfa100);
+    color: #111;
+}
+.locked {
+    background: #555;
+    color: #ccc;
+}
+.pay-box {
+    margin-top: 20px;
+    font-size: 0.95rem;
+}
+.admin {
+    margin-top: 20px;
+}
+</style>
 </head>
 
 <body>
-    <h1>PMG™EDU</h1>
 
-    <div id="subjects">
-        <button onclick="showNotes('MA110')">MA110</button>
-        <button onclick="showNotes('PH110')">PH110</button>
-        <button onclick="showNotes('CH110')">CH110</button>
-    </div>
+<h1>PMG™EDU</h1>
+<p>All Courses • Monthly Subscription: <b>K25</b></p>
 
-    <div id="notes">
-        <p>Select a subject to see notes.</p>
-    </div>
+<div class="courses">
+    <div class="course" onclick="loadCourse('MA110')"><h3>MA110</h3></div>
+    <div class="course" onclick="loadCourse('BI110')"><h3>BI110</h3></div>
+    <div class="course" onclick="loadCourse('CH110')"><h3>CH110</h3></div>
+    <div class="course" onclick="loadCourse('CS110')"><h3>CS110</h3></div>
+    <div class="course" onclick="loadCourse('PH110')"><h3>PH110</h3></div>
+</div>
 
-    <!-- 🔥 PAST PAPERS SECTION -->
-    <div class="past-papers">
-        <h3>📘 Past Papers</h3>
+<div id="papers" class="section">
+    <p>Select a course to view papers.</p>
+</div>
 
-        <a href="past-papers/CH110_2022.pdf" target="_blank">
-            <button>CH110 – 2022</button>
-        </a>
+<div class="pay-box">
+    <p><b>Pay K25 Monthly</b></p>
+    <p>📱 MTN: <b>0775302886</b><br>
+       📱 Airtel: <b>0768497390</b></p>
+    <a href="https://wa.me/260775302886" target="_blank">📲 WhatsApp Admin</a>
+</div>
 
-        <a href="past-papers/PH110_2021.pdf" target="_blank">
-            <button>PH110 – 2021</button>
-        </a>
+<div class="admin">
+    <button onclick="activate()">🔓 Admin Activate (30 Days)</button>
+</div>
 
-        <a href="past-papers/BI110_2020.pdf" target="_blank">
-            <button>BI110 – 2020</button>
-        </a>
-    </div>
+<script>
+const years = [2018,2019,2020,2021,2022,2023,2024];
+const demoYears = [2018,2019,2020,2021,2022]; // 5 demo papers
 
-    <div class="ai-helper">
-        <h3>AI Helper</h3>
-        <p>Type your question and get a detailed explanation of concepts or answers:</p>
-        <input type="text" id="aiQuestion" placeholder="Ask something..." style="width: 80%; padding: 10px; border-radius: 5px;">
-        <button onclick="askAI()" style="padding: 10px 15px; margin-left: 5px; border-radius: 5px; cursor:pointer;">Ask AI</button>
-        <p id="aiAnswer" style="margin-top: 15px;"></p>
-    </div>
+function isActive() {
+    const exp = localStorage.getItem("sub_expiry");
+    return exp && Date.now() < exp;
+}
 
-    <div class="dictionary">
-        <h3>Dictionary</h3>
-        <p>Search for definitions of terms:</p>
-        <input type="text" id="dictTerm" placeholder="Enter term..." style="width: 80%; padding: 10px; border-radius: 5px;">
-        <button onclick="searchDict()" style="padding: 10px 15px; margin-left: 5px; border-radius: 5px; cursor:pointer;">Search</button>
-        <p id="dictResult" style="margin-top: 15px;"></p>
-    </div>
+function loadCourse(course) {
+    let html = `<h2>${course} Past Papers</h2>`;
 
-    <a href="https://wa.me/260775302886" target="_blank">
-        Send Subscription Payment
-    </a>
-
-    <script>
-        const notesData = {
-            'MA110': `
-                <h2>MA110 - Mathematics Notes</h2>
-                <ul>
-                    <li>Limits and Continuity</li>
-                    <li>Differentiation</li>
-                    <li>Integration</li>
-                </ul>
-            `,
-            'PH110': `
-                <h2>PH110 - Physics Notes</h2>
-                <ul>
-                    <li>Work, Power, and Energy</li>
-                    <li>Newton's Laws</li>
-                    <li>Gravitation</li>
-                </ul>
-            `,
-            'CH110': `
-                <h2>CH110 - Chemistry Notes</h2>
-                <ul>
-                    <li>Atomic Structure</li>
-                    <li>Chemical Bonding</li>
-                    <li>Thermochemistry</li>
-                </ul>
-            `
-        };
-
-        function showNotes(subject) {
-            document.getElementById('notes').innerHTML =
-                notesData[subject] || '<p>No notes available.</p>';
+    years.forEach(y => {
+        const isDemo = demoYears.includes(y);
+        if (isDemo) {
+            html += `
+            <button class="paper-btn"
+            onclick="openPaper('${course}',${y})">
+            ${course} – ${y} (DEMO)
+            </button>`;
+        } else {
+            html += `
+            <button class="paper-btn locked"
+            onclick="locked()">
+            ${course} – ${y} 🔒
+            </button>`;
         }
+    });
 
-        function askAI() {
-            const question = document.getElementById('aiQuestion').value;
-            if (!question) return alert('Please type a question first.');
-            document.getElementById('aiAnswer').innerHTML =
-                `🤖 AI Answer: This is where a detailed explanation for "${question}" would appear.`;
-        }
+    document.getElementById("papers").innerHTML = html;
+}
 
-        function searchDict() {
-            const term = document.getElementById('dictTerm').value;
-            if (!term) return alert('Please enter a term.');
-            const dictionary = {
-                'Energy': 'The capacity to do work or produce heat.',
-                'Force': 'An influence that changes the motion of an object.',
-                'Atom': 'The smallest unit of matter.'
-            };
-            document.getElementById('dictResult').innerHTML =
-                dictionary[term] || 'Term not found in dictionary.';
-        }
-    </script>
+function openPaper(course,year) {
+    window.open(`past-papers/${course}/${course}-${year}.pdf`,'_blank');
+}
+
+function locked() {
+    if (!isActive()) {
+        alert(
+`🔒 Locked Content
+
+Monthly subscription is K25.
+
+Pay via:
+MTN: 0775302886
+Airtel: 0768497390
+
+Then WhatsApp admin for activation.`
+        );
+    }
+}
+
+function activate() {
+    const code = prompt("Admin code:");
+    if (code !== "PMG25") {
+        alert("❌ Wrong code");
+        return;
+    }
+    const expiry = Date.now() + (30 * 24 * 60 * 60 * 1000);
+    localStorage.setItem("sub_expiry", expiry);
+    alert("✅ Subscription active for 30 days");
+}
+</script>
+
 </body>
-            </html>
+</html> 
