--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMG™EDU | All Courses</title>
-
 <style>
 body{
   margin:0;
@@ -16,11 +15,13 @@ body{
 }
 h1{color:#FFD700;font-size:2.5em;}
 .quote{
-  font-size:1.3em;
-  margin:15px auto 30px;
-  color:#ccc;
-  max-width:800px;
-  font-style:italic;
+  font-size:1.6em;
+  font-weight:bold;
+  margin:20px auto 30px;
+  background: linear-gradient(to right, #222, #888);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  max-width:900px;
 }
 .courses{
   display:grid;
@@ -75,15 +76,16 @@ h1{color:#FFD700;font-size:2.5em;}
   padding:15px;border-radius:10px;min-height:80px;
 }
 iframe{border:none;background:#111;}
+.pay-box button{
+  padding:12px 20px;border:none;border-radius:10px;
+  background:#FFD700;color:#111;font-weight:bold;cursor:pointer;
+}
 </style>
 </head>
-
 <body>
 
 <h1>PMG™EDU</h1>
-<div class="quote">
-  “HARD WORK BEATS NATURAL TALENT WHEN NATURAL TALENT DOES NOT WORK HARD.”
-</div>
+<div class="quote">WORK HARDER. NOBODY CARES.</div>
 
 <p>All Courses • Monthly Subscription: <b>K25</b></p>
 
@@ -102,6 +104,12 @@ iframe{border:none;background:#111;}
 <div id="viewer" class="section" style="display:none;">
   <h2 id="viewer-title"></h2>
   <iframe id="pdfFrame" width="100%" height="600px"></iframe>
+</div>
+
+<div class="pay-box">
+  <h2>Monthly Subscription: K25</h2>
+  <p>📱 MTN: 0775302886<br>📱 Airtel: 0768497390</p>
+  <button onclick="activateSubscription()">Activate Subscription</button>
 </div>
 
 <div class="section" id="dictionary">
@@ -123,6 +131,7 @@ document.addEventListener("contextmenu", e => e.preventDefault());
 
 const years=[2018,2019,2020,2021,2022,2023,2024];
 const demoYears=[2018,2019,2020,2021,2022];
+const subscriptionDays=30;
 
 function loadCourse(course){
   let html=`<h2>${course} Past Papers</h2>`;
@@ -130,27 +139,41 @@ function loadCourse(course){
     if(demoYears.includes(y)){
       html+=`<button class="paper-btn" onclick="openPaper('${course}',${y})">${course} – ${y} (DEMO)</button>`;
     }else{
-      html+=`<button class="paper-btn locked" onclick="locked()">${course} – ${y} 🔒</button>`;
+      html+=`<button class="paper-btn locked" onclick="openPaper('${course}',${y})">${course} – ${y} 🔒</button>`;
     }
   });
   document.getElementById("papers").innerHTML=html;
 }
 
+// Subscription system
+function activateSubscription(){
+  const now = new Date().getTime();
+  localStorage.setItem('subscriptionStart', now);
+  alert("✅ Subscription activated! You have 30 days of access.");
+}
+
+function isSubscriptionActive(){
+  const start = localStorage.getItem('subscriptionStart');
+  if(!start) return false;
+  const now = new Date().getTime();
+  const diffDays = (now - parseInt(start)) / (1000*60*60*24);
+  return diffDays <= subscriptionDays;
+}
+
 function openPaper(course,year){
+  const filePath=`past-papers/${course}/${course}-${year}.pdf`;
+  if(!demoYears.includes(year) && !isSubscriptionActive()){
+    alert("🔒 Locked. Activate your subscription to view this paper.");
+    return;
+  }
   document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
-  document.getElementById("pdfFrame").src=
-    `past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
+  document.getElementById("pdfFrame").src=filePath+"#toolbar=0&navpanes=0&scrollbar=0";
   document.getElementById("viewer").style.display="block";
   document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
 }
 
-function locked(){
-  alert("🔒 Locked. Pay K25 and WhatsApp admin to activate.");
-}
-
-/* HUGE DICTIONARY */
+// Dictionary
 const dictionary={
-  /* MA110 */
   "vector":"A quantity with both magnitude and direction.",
   "scalar":"A quantity with magnitude only.",
   "function":"A rule that assigns each input exactly one output.",
@@ -159,14 +182,12 @@ const dictionary={
   "integration":"Process of finding area under a curve.",
   "matrix":"Rectangular array of numbers.",
   "determinant":"Single value from a square matrix.",
-  /* PH110 */
   "force":"A push or pull acting on an object.",
   "velocity":"Speed in a given direction.",
   "acceleration":"Rate of change of velocity.",
   "work":"Force applied over a distance.",
   "power":"Rate of doing work.",
   "energy":"Capacity to do work.",
-  /* CH110 */
   "atom":"Smallest unit of an element.",
   "molecule":"Two or more atoms bonded together.",
   "ionic bond":"Bond formed by electron transfer.",
@@ -174,13 +195,11 @@ const dictionary={
   "mole":"Amount of substance containing Avogadro's number.",
   "acid":"Substance that donates hydrogen ions.",
   "base":"Substance that accepts hydrogen ions.",
-  /* BI110 */
   "cell":"Basic unit of life.",
   "mitosis":"Cell division producing identical cells.",
   "meiosis":"Cell division producing gametes.",
   "photosynthesis":"Process plants use to make food.",
   "enzyme":"Protein that speeds up reactions.",
-  /* CS110 */
   "algorithm":"Step-by-step method to solve a problem.",
   "variable":"Named storage location in a program.",
   "loop":"Code that repeats.",
@@ -190,18 +209,16 @@ const dictionary={
 
 function lookup(){
   const w=document.getElementById("wordInput").value.toLowerCase().trim();
-  document.getElementById("definition").innerText=
-    dictionary[w]||"❌ Term not found.";
+  document.getElementById("definition").innerText=dictionary[w]||"❌ Term not found.";
 }
 
-/* SMARTER AI HELPER */
+// AI Helper
 function askAI(){
   const q=document.getElementById("aiInput").value.toLowerCase();
   let response="🤖 Try asking about a known term with 'explain' or 'example'.";
-
   for(let term in dictionary){
     if(q.includes(term)){
-      response=`💡 ${term.toUpperCase()}\n${dictionary[term]}\n\n📘 Study Tip: Practice this concept using past papers daily.`;
+      response=`💡 ${term.toUpperCase()}\n${dictionary[term]}\n\n📘 Study Tip: Practice using past papers daily.`;
       if(q.includes("example")){
         response+=`\n\n📌 Example: Apply ${term} step by step in a real problem.`;
       }
@@ -213,4 +230,4 @@ function askAI(){
 </script>
 
 </body>
-</html>
+  </html>
